Added default deck

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -440,6 +440,20 @@ button.primary {
   cursor: not-allowed;
 }
 
+.deck-default-toggle {
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.4rem;
+  margin-bottom: 0.35rem;
+}
+
+.deck-default-toggle input {
+  width: 1.2rem;
+  height: 1.2rem;
+}
+
 .deck-control-item {
   flex: 1;
   display: flex;
